--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
     <h1>Controle remoto de Ventilador - TCC Jose Miranda Netto</h1>
 
-    <button onClick="window.location.href = 'http://tccjosemiranda.ddns.net/status=ON'" style="padding: 16px; background-color: darkblue; color:aliceblue; border-radius: 4px;font-size: 12px">Ligar</button>
+    <button onClick="window.open(http://tccjosemiranda.ddns.net/status=ON)" style="padding: 16px; background-color: darkblue; color:aliceblue; border-radius: 4px;font-size: 12px">Ligar</button>
 
-    <button onClick="window.location.href = 'http://tccjosemiranda.ddns.net/status=OFF'" style="padding: 16px; background-color: darkblue; color:aliceblue; border-radius: 4px;font-size: 12px">Desligar</button>
+    <button onClick="window.open(http://tccjosemiranda.ddns.net/status=OFF)" style="padding: 16px; background-color: darkblue; color:aliceblue; border-radius: 4px;font-size: 12px">Desligar</button>
 
 
-
+    
 
   </body>
 </html>
