--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       label {
         display: inline-block;
         width: 240px;
-        text-align: right;
+        text-align: left;
         padding-right: 10px;
       }
 
