--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 <div class="slidecontainer">
   <input type="range" min="150" max="9000" value="200" class="slider" id="myRange">
+  <p>Value: <span id="demo"></span></p>
 </div>
     
 
