--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
   <input type="range" min="150" max="9000" value="200" class="slider" id="myRange">
   <p>Value: <span id="demo"></span></p>
 </div>
-    
+    ​<script>
+var slider = document.getElementById("myRange");
+var output = document.getElementById("demo");
+output.innerHTML = slider.value;
+
+slider.oninput = function() {
+  output.innerHTML = this.value;
+}
+</script>
 
   </body>
 </html>
