--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <button onClick="window.open('http://tccjosemiranda.ddns.net/status=OFF')" style="padding: 16px; background-color: darkblue; color:aliceblue; border-radius: 4px;font-size: 12px">Desligar</button>
 
 <div class="slidecontainer">
-  <input type="range" min="150" max="9000" value="200" class="slider" id="myRange">
-  <p>Value: <span id="demo"></span></p>
+  <input type="range" min="150" max="0" value="100" class="slider" id="myRange">
+  <p>Value: <span id="demo"></span>%</p>
 </div>
     ​<script>
 var slider = document.getElementById("myRange");
