--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Controle remoto de Ventilador - TCC Jose Miranda Netto #2</title>
+    <title>Controle remoto de Ventilador - TCC Jose Miranda Netto V2</title>
     <style>
       form {
         width: 430px;
