--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Controle remoto de Ventilador - TCC Jose Miranda Netto V2</title>
+    <title>Controle remoto de Ventilador - TCC Jose Miranda Netto #2</title>
     <style>
       form {
         width: 430px;
@@ -26,7 +26,7 @@
   </head>
   <body>
 
-    <h1>Controle remoto de Ventilador - TCC Jose Miranda Netto</h1>
+    <h1>Controle remoto de Ventilador - TCC Jose Miranda Netto #2</h1>
 
     <button id="btnliga" style="padding: 16px; background-color: darkblue; color:aliceblue; border-radius: 4px;font-size: 12px">Ligar</button>
 
